<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mainLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    tools:context=".MainActivity">

    <!-- EditText for adding items -->
    <EditText
        android:id="@+id/txtAdd"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:hint="@string/hintAdd"
        android:minHeight="48dp"
        android:autofillHints="shoppingCart"
        android:inputType="text"/>

    <!-- Button to add items -->
    <Button
        android:id="@+id/btnAddItem"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/add_item"
        android:layout_below="@id/txtAdd"
        android:layout_marginTop="8dp"
        android:layout_centerHorizontal="true"/>

    <!-- ListView to display shopping items -->
    <ListView
        android:id="@+id/shoppingListView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/btnAddItem"
        android:layout_marginTop="16dp"/>

    <!-- Button to save items -->
    <Button
        android:id="@+id/btnSave"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btnSave"
        android:layout_below="@id/shoppingListView"
        android:layout_marginTop="16dp"
        android:layout_centerHorizontal="true"/>

    <!-- Button to mark items as done -->
    <Button
        android:id="@+id/btnDone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btnDone"
        android:layout_below="@id/btnSave"
        android:layout_marginTop="8dp"
        android:layout_centerHorizontal="true"/>

    <!-- Button to show the list -->
    <Button
        android:id="@+id/btnShowList"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btnShowList"
        android:layout_below="@id/btnDone"
        android:layout_marginTop="16dp"
        android:layout_centerHorizontal="true"/>

</RelativeLayout>
